--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,71 @@
-.jumbotron {
-  margin-bottom: 0;
+body {
+    font-family: "Open Sans", sans-serif;
+  }
+  
+  h1,
+  h2,
+  h3 {
+    font-family: "Open Sans", cursive;
+  }
+
+  h5 {
+      color: white;
+  }
+  
+.site-footer {
+    //background-image: linear-gradient(to right,#24136e, #1430cf, #030433, white);
+    //background-image: linear-gradient(to right, #c0bfcc, rgb(26, 24, 24));
+    background-color: #454545;
+    color: white;
+    padding: 20px 0;
+    
+  }
+
+h1, h2, h3 {
+    font-family: "Lobster", cursive;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 
+                 0 3px 0 #ccc, 0 4px 0 #ccc, 
+                 0 5px 0 #ccc, 0 6px 0 #ccc, 
+                 0 7px 0 #ccc, 0 8px 0 #ccc, 
+                 0 9px 0 #ccc, 0 10px 0 #ccc, 
+                 0 11px 0 #ccc, 0 12px 0 #ccc, 
+                 0 20px 30px rgba(0, 0, 0, 0.5); 
 }
 
+.navbar {
+    background-color: rgb(75, 69, 69);
+}
+
+.jumbotron {
+    margin: 0;
+    padding: 30px;
+    background-image: linear-gradient(to right, #24136e, #1430cf, #030433);
+    color: white;
+  }
+
 #collec {
-  background-color: bisque;
+    background-color: bisque;
 }
 
 #hed {
-  background-color: #454545;
-  color: aliceblue;
+    background-color: #454545;
+    color: aliceblue;
 }
 
 .im1 {
-  width: 100%;
+    width: 100%;
 }
 
 .fa-shopping-basket {
-  font-size: 40px;
+    font-size: 40px;
 }
 
 #czech-btn {
-  background-color: rgb(110, 58, 58);
+    background-color: rgb(110, 58, 58);
 }
 
 .czech-btn {
-  margin-left: 100px;
+    margin-left: 100px;
 }
 
-footer {
-  background-color: #454545;
-  color: white;
-}
-{
-  color: white;
-}
+  
