--- a/css/styles.css
+++ b/css/styles.css
@@ -92,3 +92,15 @@ a #headerA{
 position: center;
 left: 0px;
 }
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
+
+.carousel {
+  border: solid 5px #454545; 
+}
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100; }
